Attempt to fix background issue on ios devices.

--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,14 @@ body,html{
 
 #bg3{
   background-image: url('../img/img3.png');
-  height: 85%;
-  height: 85vh;
+  min-height: 85%;
+  min-height: 85vh;
 }
 
 #bg4{
   background-image: url('../img/img4.png');
-  height: 85%;
-  height: 85vh;
+  min-height: 85%;
+  min-height: 85vh;
 }
 
 .bgText{
@@ -272,4 +272,257 @@ input:-webkit-autofill {
   #footerEmail,#footerPhone{
     border-bottom: 0;
   }
+}
+
+/* ----------- iPhone 4 and 4S ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+}
+
+/* ----------- iPhone 5 and 5S ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* ----------- iPhone 6+ ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 414px)
+  and (max-device-width: 736px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* ----------- iPad mini ----------- */
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* ----------- iPad 1 and 2 ----------- */
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* ----------- iPad 3 and 4 ----------- */
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #bg1, #bg2, #bg3, #bg4{
+      background-attachment: scroll;
+    }
+
 }
